The decoration at skills section for mobile version is comment out for the issue of horizontal scroll issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -326,7 +326,7 @@ header::before {
   .skills-wrapper {
     position: relative;
   }
-  .skills-wrapper .decoration-block::before {
+  /* .skills-wrapper .decoration-block::before {
     content: "";
     width: 530px;
     height: 130px;
@@ -337,7 +337,7 @@ header::before {
     right: 0;
     transform: translateX(45%);
     bottom: 0;
-  }
+  } */
 }
 
 /* SKILLS SECTION STYLE END */
